[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scene/GAme/antrian/DalamToilet.gd" type="Script" id=1]
[ext_resource path="res://Asset/antrian/Toilet Urinal.png" type="Texture" id=2]
[ext_resource path="res://Scene/GAme/antrian/Karakter.tscn" type="PackedScene" id=3]
[ext_resource path="res://Asset/Quicksand/MoreSugar-Thin.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Asset/antrian/audiodalamToilet/Level rahasia, bermain aturan-aturan di toilet umum.mp3" type="AudioStream" id=5]
[ext_resource path="res://Scene/GAme/BoysGirls/BoysGirls.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scene/GAme/antrian/antrianToilet.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scene/Main/GUI.tscn" type="PackedScene" id=8]
[ext_resource path="res://Asset/antrian/audiodalamToilet/suara_20keran_20dan_20air.mp3" type="AudioStream" id=9]
[ext_resource path="res://Asset/Home/Bintang Putih.png" type="Texture" id=10]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0.835294, 0.509804, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 61.5, 95 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 80, 119 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 48.5, 115 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 61.5, 92.5 )

[sub_resource type="Curve" id=7]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, -243.818 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0.00826446, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[node name="DalamToilet" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 2 )

[node name="toilet" type="Panel" parent="Control"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 52.0
margin_top = 218.0
margin_right = 398.0
margin_bottom = 383.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Polygon2D" type="Polygon2D" parent="Control/toilet"]
position = Vector2( 0, 16 )
color = Color( 1, 0.835294, 0.509804, 1 )
polygon = PoolVector2Array( 317, 148, 362, 189, 335, 121 )

[node name="Label" type="Label" parent="Control/toilet"]
modulate = Color( 0.27451, 0.25098, 0.25098, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "Gunakanlah Toilet"
align = 1
valign = 1
autowrap = true

[node name="wastafel" type="Panel" parent="Control"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 299.0
margin_top = 218.0
margin_right = 645.0
margin_bottom = 383.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Polygon2D" type="Polygon2D" parent="Control/wastafel"]
position = Vector2( 0, 16 )
color = Color( 1, 0.835294, 0.509804, 1 )
polygon = PoolVector2Array( 317, 148, 362, 189, 335, 121 )

[node name="Label" type="Label" parent="Control/wastafel"]
modulate = Color( 0.27451, 0.25098, 0.25098, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "Ayo Cuci Tanganmu"
align = 1
valign = 1
autowrap = true

[node name="tisu" type="Panel" parent="Control"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 661.0
margin_top = 186.0
margin_right = 1007.0
margin_bottom = 351.0
rect_scale = Vector2( -1, 1 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Polygon2D" type="Polygon2D" parent="Control/tisu"]
position = Vector2( 0, 16 )
color = Color( 1, 0.835294, 0.509804, 1 )
polygon = PoolVector2Array( 317, 148, 362, 189, 335, 121 )

[node name="Label" type="Label" parent="Control/tisu"]
modulate = Color( 0.27451, 0.25098, 0.25098, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 348.0
margin_right = 348.0
rect_scale = Vector2( -1, 1 )
custom_fonts/font = SubResource( 2 )
text = "Keringkan Tangan menggunakan Tisu"
align = 1
valign = 1
autowrap = true

[node name="sampah" type="Panel" parent="Control"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 515.0
margin_top = 243.0
margin_right = 861.0
margin_bottom = 408.0
rect_scale = Vector2( -1, 1 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Polygon2D" type="Polygon2D" parent="Control/sampah"]
position = Vector2( 0, 16 )
color = Color( 1, 0.835294, 0.509804, 1 )
polygon = PoolVector2Array( 317, 148, 362, 189, 335, 121 )

[node name="Label" type="Label" parent="Control/sampah"]
modulate = Color( 0.27451, 0.25098, 0.25098, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 348.0
margin_right = 348.0
rect_scale = Vector2( -1, 1 )
custom_fonts/font = SubResource( 2 )
text = "buanglah Sampah
ke tempat sampah"
align = 1
valign = 1
autowrap = true

[node name="Tween" type="Tween" parent="."]

[node name="Karakter" parent="." instance=ExtResource( 3 )]
position = Vector2( 1093, 514 )

[node name="Node2D" type="Node2D" parent="."]

[node name="toilet" type="Area2D" parent="Node2D"]
position = Vector2( 403, 548 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/toilet"]
position = Vector2( 8.5, 6 )
shape = SubResource( 3 )

[node name="wastafel" type="Area2D" parent="Node2D"]
position = Vector2( 691, 548 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/wastafel"]
position = Vector2( 5, 9 )
shape = SubResource( 4 )
disabled = true

[node name="tisu" type="Area2D" parent="Node2D"]
position = Vector2( 261, 548 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/tisu"]
position = Vector2( 8.5, -24 )
shape = SubResource( 5 )
disabled = true

[node name="tongSampah" type="Area2D" parent="Node2D"]
position = Vector2( 114, 548 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/tongSampah"]
position = Vector2( 2.5, 11.5 )
shape = SubResource( 6 )
disabled = true

[node name="narasi" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GUI" parent="CanvasLayer" instance=ExtResource( 8 )]
backScene = ExtResource( 6 )
gameScene = ExtResource( 7 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
visible = false
position = Vector2( 403, 548 )
lifetime = 3.0
texture = ExtResource( 10 )
emission_shape = 2
emission_rect_extents = Vector2( 50, 50 )
gravity = Vector2( 0, 0 )
angle_curve = SubResource( 7 )
scale_amount = 0.08
color_ramp = SubResource( 8 )

[connection signal="lepas" from="Karakter" to="." method="_on_Karakter_lepas"]
[connection signal="area_entered" from="Node2D/toilet" to="." method="_on_toilet_area_entered"]
[connection signal="area_exited" from="Node2D/toilet" to="." method="_on_toilet_area_exited"]
[connection signal="area_entered" from="Node2D/wastafel" to="." method="_on_wastafel_area_entered"]
[connection signal="area_exited" from="Node2D/wastafel" to="." method="_on_wastafel_area_exited"]
[connection signal="area_entered" from="Node2D/tisu" to="." method="_on_tisu_area_entered"]
[connection signal="area_exited" from="Node2D/tisu" to="." method="_on_tisu_area_exited"]
[connection signal="area_entered" from="Node2D/tongSampah" to="." method="_on_tongSampah_area_entered"]
[connection signal="area_exited" from="Node2D/tongSampah" to="." method="_on_tongSampah_area_exited"]
